<resources>
    <string name="skip_text">skip</string>
    <string name="welcome_text">Welcome to</string>
    <string name="vizo">Vizo</string>
    <string name="intro_text">Get the latest and most relevant news\n stories without fumbling through\n newspapers and aggregators.</string>
    <string name="cat_business">Business</string>
    <string name="cat_politics">Politics</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_art_culture">Arts &amp; Culture</string>
    <string name="cat_technology">Technology</string>
    <string name="cat_top_news">Top News</string>
    <string name="cat_us">U.S.</string>
    <string name="cat_world">World</string>
    <string name="cat_celebrities">Celebrity</string>
    <string name="cat_vizou">Vizo U</string>
    <string name="cat_science">Science</string>
    <string name="your_world_at_a_glance">Your World At A Glance.</string>
    <string name="Next"></string>
    <string name="email_login">Login with Email</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="tw_login">Login with Twitter</string>
    <string name="Login">Login</string>
    <string name="Email_Login">Email Login</string>
    <string name="Email_Address">Email Address</string>
    <string name="Password">Password</string>
    <string name="Dont_have_account">Don\'t have an account?</string>
    <string name="Sign_Up"><u>Sign Up</u></string>
    <string name="Create_Account">Create Account</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Add_Photo">Add Photo</string>
    <string name="app_name">Vizo</string>
    <string name="done">done</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="all_of_the">That\'s All of The</string>
    <string name="read_previous">Read Previous</string>
    <string name="looks_like_all_read">Looks Like You\'ve Read</string>
    <string name="change_category">Change Category</string>
    <string name="good_job">good job :)</string>
    <string name="or">or</string>
    <string name="continue_hold">CONTINUE HOLDING TO VIEW GLANCE</string>
    <string name="release_to_cancel">release to cancel</string>
    <string name="post_to_facebook">Post to Facebook</string>
    <string name="post_to_twitter">Post to Twitter</string>
    <string name="post_to_instagram">Post to Instagram</string>
    <string name="share_with_linkedin">Share with LinkedIn</string>
    <string name="text">Text</string>
    <string name="email">Email</string>
    <string name="view_article_source">View Article Sources</string>
    <string name="save_image">Save Image</string>
    <string name="no_account">No Account</string>
    <string name="Settings">Settings</string>
    <string name="Glanced">Glanced</string>
    <string name="Editions">Editions</string>
    <string name="General">General</string>
    <string name="Show_Tips">Show Tips</string>
    <string name="Auto_Translate">Auto Translate</string>
    <string name="About">About</string>
    <string name="About_Vizo">About Vizo</string>
    <string name="Help_Feedback">Help &amp; Feedback</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="HOLD_DRAG">HOLD &amp; DRAG</string>
    <string name="Organize_Glance">Organize Glance</string>
    <string name="categories">categories</string>
    <string name="vizo_description">
        Vizo delivers today\'s top-trending\n
        global news headlines in brief,\n
        image-based summaries.</string>
    <string name="swipe_to_continue">Swipe to continue</string>
    <string name="tri_daily_update">Tri-daily update</string>
    <string name="tri_daily_update_description">
        Here at Vizo, we upload 15 stories three\n
        times a day - morning, afternoon\n
        and evening.</string>
    <string name="Glances">Glances</string>
    <string name="Glances_description">
        A glance is a new perspective on trending\n
        news stories consisting of a 500 characters\n
        synopsis &amp; a black and white image with\n
        accentuated focal points.</string>
    <string name="VizoU">VizoU</string>
    <string name="Tutorial_VizoU_Description">A revolutionary platform that allows anyone
        to become a journalist and publish their own articles. Take your own image,
        upload it and then share it with the world.</string>
    <string name="Glance_Preferences">Glance Preferences</string>
    <string name="Glance_Preferences_description">Tailor your news to your world. Customize\n
        your news feeds to ensure that you see the\n
        news you desire.</string>
    <string name="vizo_copyright">(c) Vizo, inc. 2015</string>
    <string name="vizo_version">Vizo 1.0</string>
    <string name="vizo_about">
        Vizo delivers today\'s top-trending global news headlines delivered in brief image-based
        summaries, three times a day We give you the latest and greatest news stories in a visually
        captivating and easily digestible format.</string>
    <string name="HOLD_VIZO">HOLD VIZO</string>
    <string name="to_view_your">to view your</string>
    <string name="Account">Account</string>
    <string name="and">and</string>
    <string name="adjust_your">adjust your</string>
    <string name="SWIPE_UP_OR_DOWN">SWIPE UP OR DOWN</string>
    <string name="Change_Glance_Categories">Change Glance Categories</string>
    <string name="TAP_THE_LIGHTNING_BOLT">TAP THE LIGHTNING BOLT</string>
    <string name="to_load">to load</string>
    <string name="New_Glances">New Glances</string>
    <string name="State_Of_The_Day">State Of The Day</string>
    <string name="Help">Help</string>
    <string name="STAFF_PICKS">STAFF PICKS</string>
    <string name="TRENDING">TRENDING</string>
    <string name="SWIPE_DOWN">SWIPE DOWN</string>
    <string name="to_view">to view</string>
    <string name="Glance_Preview">Glance Preview</string>
    <string name="SWIPE_LEFT_OR_RIGHT">SWIPE LEFT OR RIGHT</string>
    <string name="to">to</string>
    <string name="Change_Glances">Change Glances</string>
    <string name="Choose_an_Edition">Choose an Edition</string>
    <string name="Account_Settings">Account Settings</string>
    <string name="Change_Password">Change Password</string>
    <string name="Old_Password">Old Password</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Accounts">Accounts</string>
    <string name="Manage_Accounts">Manage Accounts</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Add_Account">Add Account</string>
    <string name="Logout">Logout</string>
    <string name="Terms_of_Service">Terms of Service</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Credits">Credits</string>
    <string name="Agree">Agree</string>
    <string name="Decline">Decline</string>
    <string name="FAQ">FAQ</string>
    <string name="Support">Support</string>
    <string name="Feedback">Feedback</string>
    <string name="Frequently_Asked_Questions">Frequently Asked Questions</string>
    <string name="to_navigate_through">to navigate through</string>
    <string name="Glanced_Stories">Glanced Stories</string>
    <string name="TAP_THE_STAR">TAP THE STAR</string>
    <string name="to_only_view">to only view</string>
    <string name="Favorited_Glances">Favorited Glances</string>
    <string name="read_glance">read glance</string>
    <string name="Clear_All_History">Clear All History</string>
    <string name="no_glanced">No Glanced History</string>
    <string name="Activity">Activity</string>
    <string name="Create_Glance">Create Glance</string>
    <string name="Tap_to_add_a_photo">Tap to add a photo</string>
    <string name="Tap_to_change_photo">Tap to change photo</string>
    <string name="Preview">Preview</string>
    <string name="Delete_glance_confirmation">Are you sure you want to delete your glance?</string>
    <string name="Upload">Upload</string>
    <string name="Reshoot">Reshoot</string>
    <string name="Capture">Capture</string>
    <string name="Use">Use</string>
    <string name="Choose_a_Category">Choose a Category</string>
    <string name="Edit">Edit</string>
    <string name="Publish">Publish</string>
    <string name="Connect_Your_Facebook_Account">Connect Your Facebook Account</string>
    <string name="To_join_the_VizoU">To join the VizoU community and post glances</string>
    <string name="of">of</string>
    <string name="Character_minimum">Character Minimum</string>
    <string name="Characters_remaining">Characters remaining</string>
    <string name="Write_something_novel">Write something novel</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="Want_to_read_more">Want to read more?
        Get the app today and experience Your World at a Glance. Next.™</string>
    <string name="Get_the_app_today">Get the app today</string>
    <string name="facebook_app_id">1567103316908435</string>
</resources>