<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <com.vizo.news.ui.VizoTextView
            android:id="@+id/tv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <com.vizo.news.ui.VizoTextView
            style="@style/White_TextView_Style"
            android:layout_centerInParent="true"
            android:text="@string/Email_Login"
            android:textStyle="bold" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:divider="@drawable/divider"
        android:focusable="true"
        android:padding="36dp"
        android:showDividers="middle|end">

        <TableRow>

            <com.vizo.news.ui.VizoEditText
                android:id="@+id/et_email_address"
                android:layout_width="0dp"
                android:layout_weight="100"
                android:autoText="false"
                android:background="@color/transparent"
                android:hint="@string/Email_Address"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@null"
                android:textSize="16dp" />
        </TableRow>

        <TableRow>

            <com.vizo.news.ui.VizoEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_weight="100"
                android:autoText="false"
                android:background="@color/transparent"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@null"
                android:textSize="16dp" />
        </TableRow>
    </TableLayout>

    <com.vizo.news.ui.VizoTextView
        android:id="@+id/tv_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_pink_bg"
        android:capitalize="words"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.vizo.news.ui.VizoTextView
            style="@style/White_TextView_Style"
            android:text="@string/Dont_have_account"
            android:textSize="16dp" />

        <com.vizo.news.ui.VizoTextView
            android:id="@+id/tv_signup_button"
            style="@style/Yellow_TextView_Style"
            android:layout_marginLeft="4dp"
            android:text="@string/Sign_Up"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>