<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="right">

        <com.vizo.news.ui.VizoTextView
            android:id="@+id/tv_next_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <com.vizo.news.ui.VizoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Glance_Preferences"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <com.vizo.news.ui.VizoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/Glance_Preferences_description"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="36dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/tutorial_5_image" />
    </LinearLayout>
</LinearLayout>