<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_custom_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/icon_back" />

        <com.vizo.news.ui.VizoTextView
            style="@style/White_TextView_Style"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Change_Password"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:focusable="true"
        android:padding="36dp"
        android:showDividers="middle|end">

        <TableRow>

            <com.vizo.news.ui.VizoEditText
                android:id="@+id/et_old_password"
                android:layout_width="0dp"
                android:layout_weight="100"
                android:autoText="false"
                android:background="@color/transparent"
                android:hint="@string/Old_Password"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@null"
                android:textSize="16dp" />
        </TableRow>

        <TableRow>

            <com.vizo.news.ui.VizoEditText
                android:id="@+id/et_new_password"
                android:layout_width="0dp"
                android:layout_weight="100"
                android:autoText="false"
                android:background="@color/transparent"
                android:hint="@string/New_Password"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@null"
                android:textSize="16dp" />
        </TableRow>

        <TableRow>

            <com.vizo.news.ui.VizoEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="0dp"
                android:layout_weight="100"
                android:autoText="false"
                android:background="@color/transparent"
                android:hint="@string/Confirm_Password"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@null"
                android:textSize="16dp" />
        </TableRow>
    </TableLayout>

    <com.vizo.news.ui.VizoTextView
        style="@style/White_TextView_Style"
        android:layout_width="match_parent"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/button_pink_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/done"
        android:textSize="16dp" />
</LinearLayout>