<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_custom_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/icon_back" />

        <com.vizo.news.ui.VizoTextView
            style="@style/White_TextView_Style"
            android:layout_centerInParent="true"
            android:text="@string/Glance_Preferences" />

        <com.vizo.news.ui.VizoTextView
            android:id="@+id/tv_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/done"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_custom_actionbar"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.vizo.news.ui.CoverFlowCarousel
                android:id="@+id/carousel"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:background="@drawable/panel_normal_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/lv_left_panel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/preference_panel_height"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/panel_normal_bg"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="6dp"
                    android:padding="12dp"
                    android:scrollbars="none" />

                <ListView
                    android:id="@+id/lv_right_panel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/preference_panel_height"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/panel_normal_bg"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="6dp"
                    android:padding="12dp"
                    android:scrollbars="none" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_wt_hold_drag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/black_overlay"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_wt_hold_drag" />

        <com.vizo.news.ui.VizoTextView
            style="@style/White_TextView_Style"
            android:layout_marginTop="10dp"
            android:text="@string/HOLD_DRAG" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.vizo.news.ui.VizoTextView
                style="@style/White_TextView_Style"
                android:text="@string/to"
                android:textSize="16dp" />

            <com.vizo.news.ui.VizoTextView
                style="@style/White_TextView_Style"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/Organize_Glance"
                android:textColor="@color/vizo_yellow"
                android:textSize="16dp" />

            <com.vizo.news.ui.VizoTextView
                style="@style/White_TextView_Style"
                android:text="@string/categories"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>